<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Sascha Peilicke
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="about">About</string>
    <string name="action">Actions</string>
    <string name="account_icon_description">Account icon</string>
    <string name="account_list_description">Remind me about my contacts birthdays, anniversaries and other events from these accounts:</string>
    <string name="account_title_template" translatable="false">%1$s (%2$s)</string>
    <string name="anniversaries">Anniversaries</string>
    <string name="app_name">Birthday Calendar</string>
    <string name="birthdays">Birthdays</string>
    <string name="birthdays_and_anniversaries">Birthdays and anniversaries</string>
    <string name="birthday_calendar_create">Updating your birthday calendar…</string>
    <string name="birthday_calendar_ready">Your birthday calendar is ready!</string>
    <string name="calendar">Calendar</string>
    <string name="claim_one_title">Never</string>
    <string name="claim_one_description">Miss birthdays again. Get birthdays for all your social networks right inside Google Calendar.</string>
    <string name="claim_two_title">Universal</string>
    <string name="claim_two_description">Supports Facebook, LinkedIn, Xing, Skype and all other apps which sync contacts with your Android device.</string>
    <string name="claim_three_title">Remember</string>
    <string name="claim_three_description">Enable reminder alarms and decide which contacts you want to see. You\'ll get notifications for all of them.</string>
    <string name="dismiss">Dismiss</string>
    <string name="done">Done</string>
    <plurals name="event_anniversary_description_template">
        <item quantity="one">%1$s celebrates %2$d year</item>
        <item quantity="other">%1$s celebrates %2$d years</item>
    </plurals>
    <string name="event_anniversary_title_template">%1$s\'s anniversary</string>
    <plurals name="event_birthday_description_template">
        <item quantity="one">%1$s was born %2$d and turns %3$d year today</item>
        <item quantity="other">%1$s was born %2$d and turns %3$d years today</item>
    </plurals>
    <string name="event_birthday_title_template">%1$s\'s birthday</string>
    <string name="event_other_title_template">%1$s\'s other event</string>
    <string name="event_custom_title_template">%2$s of %1$s</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_mail_subject_template">Feedback for %s</string>
    <string name="follow">Follow</string>
    <string name="follow_on_twitter">Follow us on Twitter</string>
    <string name="fork_on_github">Fork on GitHub</string>
    <string name="get_app_template">Get the %s Android app</string>
    <string name="help">Help</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="hide_app_icon">Hide app icon</string>
    <string name="hide_app_icon_from_launcher">Hide app icon from launcher</string>
    <string name="hide_app_icon_enable">You can always re-enable the app icon via the "Accounts" system settings.</string>
    <string name="info">Info</string>
    <string name="launch_app">Launch app</string>
    <string name="loading">Loading</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum</string>
    <string name="lorem_ipsum_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="next">Next</string>
    <string name="notifications">Notifications</string>
    <string name="open">Open</string>
    <string name="open_source">Open Source</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="please_wait">Please wait…</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="provide_feedback">Provide feedback</string>
    <string name="rate_us_in_the_play_store">Rate us in the Play Store</string>
    <string name="recommend_to_a_friend">Recommend it to a friend</string>
    <string name="send_email">Send email…</string>
    <string name="settings">Settings</string>
    <string name="skip">Skip</string>
    <string name="share_via">Share via…</string>
    <string name="social">Social</string>
    <string name="support_us">Support us</string>
    <string name="sources">Sources</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="version_info">Version info</string>

    <!-- Settings -->
    <string name="pref_first_run_key" translatable="false">first_run</string>
    <bool name="pref_first_run_default">true</bool>
    <string name="pref_birthdays_sync_key" translatable="false">sync_birthdays</string>
    <string name="pref_birthdays_sync_description">Display birthday reminder events</string>
    <bool name="pref_birthdays_sync_default">true</bool>
    <string name="pref_anniversaries_sync_key" translatable="false">sync_anniversaries</string>
    <string name="pref_anniversaries_sync_description">Display anniversary reminder events</string>
    <bool name="pref_anniversaries_sync_default">true</bool>
    <string name="pref_onboarding_finished_key" translatable="false">onboarding_finished</string>
    <bool name="pref_onboarding_finished_default">false</bool>
    <string name="pref_other_events_sync_key" translatable="false">sync_other_events</string>
    <string name="pref_other_events_sync_title">Other events</string>
    <string name="pref_other_events_sync_description">Display other reminder events</string>
    <bool name="pref_other_events_sync_default">false</bool>
    <string name="pref_calendar_color_key" translatable="false">calendar_color</string>
    <string name="pref_calendar_color_title">Calendar color</string>
    <color name="pref_calendar_color_default">@color/primary</color>
    <!-- Settings for Notifications -->
    <string name="pref_reminder_time_1_key" translatable="false">reminder_key_1</string>
    <string name="pref_reminder_time_1_title">Remind me</string>
    <string name="pref_reminder_time_2_key" translatable="false">reminder_key_2</string>
    <string name="pref_reminder_time_2_title">Remind me also</string>
    <string-array name="pref_reminder_time_titles">
        <item>not at all</item>
        <item>on the same day</item>
        <item>one day in advance</item>
        <item>two days in advance</item>
        <item>one week in advance</item>
    </string-array>
    <string-array name="pref_reminder_time_values" translatable="false">
        <item>-2</item>
        <item>0</item>
        <item>1440</item> <!-- 1 * 24 * 60 -->
        <item>2880</item> <!-- 2 * 24 * 60 -->
        <item>10080</item> <!-- 7 * 24 * 60 -->
    </string-array>
    <string name="pref_reminder_time_1_default" translatable="false">0</string>
    <string name="pref_reminder_time_2_default" translatable="false">-2</string>
    <!-- See http://developer.android.com/reference/android/provider/CalendarContract.RemindersColumns.html#MINUTES -->
    <!-- Settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_periodic_sync_frequency_key" translatable="false">sync_frequency</string>
    <string name="pref_periodic_sync_frequency_title">Periodic sync frequency</string>
    <string-array name="pref_periodic_sync_frequency_titles">
        <item>3 hours</item>
        <item>6 hours</item>
        <item>1 Day</item>
    </string-array>
    <string-array name="pref_periodic_sync_frequency_values" translatable="false">
        <item>10800000</item> <!-- 3 * 60 * 60 * 1000 to match AlarmManager.INTERVAL_HOUR * 3, Sigh... -->
        <item>21600000</item> <!-- 6 * 60 * 60 * 1000 to match AlarmManager.INTERVAL_HOUR * 6, Sigh... -->
        <item>86400000</item> <!-- 24 * 60 * 60 * 1000 to match AlarmManager.INTERVAL_DAY, Sigh... -->
    </string-array>
    <integer name="pref_periodic_sync_frequency_default">86400000</integer>
    <!-- Miscellaneous settings -->
    <string name="pref_hide_app_icon_key" translatable="false">hide_app_icon</string>
    <bool name="pref_hide_app_icon_default">false</bool>

</resources>
