<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="@string/pref_birthdays_sync_key"
        android:title="@string/birthdays"
        android:summary="@string/pref_birthdays_sync_description"
        android:defaultValue="@bool/pref_birthdays_sync_default" />

    <CheckBoxPreference
        android:key="@string/pref_anniversaries_sync_key"
        android:title="@string/anniversaries"
        android:summary="@string/pref_anniversaries_sync_description"
        android:defaultValue="@bool/pref_anniversaries_sync_default" />

    <CheckBoxPreference
        android:key="@string/pref_other_events_sync_key"
        android:title="@string/pref_other_events_sync_title"
        android:summary="@string/pref_other_events_sync_description"
        android:defaultValue="@bool/pref_other_events_sync_default" />

    <yuku.ambilwarna.widget.AmbilWarnaPreference
        android:key="@string/pref_calendar_color_key"
        android:title="@string/pref_calendar_color_title"
        android:defaultValue="@color/pref_calendar_color_default" />

</PreferenceScreen>