<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/pref_reminder_time_1_key"
        android:title="@string/pref_reminder_time_1_title"
        android:entries="@array/pref_reminder_time_titles"
        android:entryValues="@array/pref_reminder_time_values"
        android:defaultValue="@string/pref_reminder_time_1_default"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="@string/pref_reminder_time_2_key"
        android:title="@string/pref_reminder_time_2_title"
        android:entries="@array/pref_reminder_time_titles"
        android:entryValues="@array/pref_reminder_time_values"
        android:defaultValue="@string/pref_reminder_time_2_default"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
